# python-project-template

./: .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
